--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
         </div>
     </nav>
 
+    <section id="home" class="home container">
+        <div class="row">
+            <div class="home-kiri col-7">
+                <h3 class="fw-semibold">Hi! Iam</h3>
+                <h1 class="fw-bold">Ocki Indrawan</h1>
+                <p>A Programmer based in Indonesia</p>
+                <a class="btn" href="img/potrait.png" download>resume</a>
+            </div>
+            <div class="home-kanan col-5">
+                <img src="img/potrait.png" alt="" srcset="">
+            </div>
+        </div>
+        <div class="arrow">
+            <a href="#about">More info</a>
+            <a href="#about">
+                <img src="img/arrow.svg" alt="">
+            </a>
+        </div>
+    </section>
 
 
 
