--- a/index.html
+++ b/index.html
@@ -45,12 +45,83 @@
         </div>
         <div class="arrow">
             <a href="#about">More info</a>
-            <a href="#about">
+            <a id="panah" href="#about">
                 <img src="img/arrow.svg" alt="">
             </a>
         </div>
     </section>
 
+    <section id="about" class="about container">
+        <div class="box1">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam vitae nam blanditiis, sequi dolorem
+                illum! Omnis saepe sapiente possimus corrupti id magnam reiciendis repellendus necessitatibus vitae ab
+                quasi debitis delectus quidem et, dolores consectetur dignissimos officia provident obcaecati suscipit
+                cumque reprehenderit. Eligendi ipsam reiciendis quis tenetur minima voluptatum eum enim.</p>
+            <div class="job">
+                <div class="job-item">
+                    <div class="job-header">
+                        <div class="job-singkat">
+                            <h5>Software Enginner</h5>
+                            <p>Coding Studio (2020-2023)</p>
+                        </div>
+                        <div class="more">
+                            <button class="btn button" onclick="toogleDetail(event)">More Info</button>
+                        </div>
+                    </div>
+                    <div class="job-detail">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos magnam repudiandae
+                            ad
+                            doloremque, similique itaque, beatae blanditiis, quo consequuntur aliquam voluptatem
+                            tempore?
+                            Ullam deserunt rem earum nihil labore incidunt vel excepturi repellendus, id sed natus, esse
+                            suscipit pariatur dolorem quo assumenda vero facilis iusto non corporis distinctio, beatae
+                            veritatis.</p>
+                    </div>
+                </div>
+                <div class="job-item">
+                    <div class="job-header">
+                        <div class="job-singkat">
+                            <h5>Software Enginner</h5>
+                            <p>Coding Studio (2020-2023)</p>
+                        </div>
+                        <div class="more">
+                            <button class="btn button" onclick="toogleDetail(event)">More Info</button>
+                        </div>
+                    </div>
+                    <div class="job-detail">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos magnam repudiandae
+                            ad
+                            doloremque, similique itaque, beatae blanditiis, quo consequuntur aliquam voluptatem
+                            tempore?
+                            Ullam deserunt rem earum nihil labore incidunt vel excepturi repellendus, id sed natus, esse
+                            suscipit pariatur dolorem quo assumenda vero facilis iusto non corporis distinctio, beatae
+                            veritatis.</p>
+                    </div>
+                </div>
+                <div class="job-item">
+                    <div class="job-header">
+                        <div class="job-singkat">
+                            <h5>Software Enginner</h5>
+                            <p>Coding Studio (2020-2023)</p>
+                        </div>
+                        <div class="more">
+                            <button class="btn button" onclick="toogleDetail(event)">More Info</button>
+                        </div>
+                    </div>
+                    <div class="job-detail">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos magnam repudiandae
+                            ad
+                            doloremque, similique itaque, beatae blanditiis, quo consequuntur aliquam voluptatem
+                            tempore?
+                            Ullam deserunt rem earum nihil labore incidunt vel excepturi repellendus, id sed natus, esse
+                            suscipit pariatur dolorem quo assumenda vero facilis iusto non corporis distinctio, beatae
+                            veritatis.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
     <!-- link CDN Bootstrap JS -->
