--- a/index.html
+++ b/index.html
@@ -123,6 +123,27 @@
         </div>
     </section>
 
+    <section id="work" class="work container">
+        <div class="work-box">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis voluptatibus beatae ut
+                voluptates
+                perspiciatis fuga praesentium veniam reprehenderit quaerat, error commodi labore facilis vel corrupti
+                sunt quidem voluptate? Qui ipsum provident dolorem in excepturi nostrum, quas sequi minima! Fugit quo
+                consequuntur quisquam laboriosam tempore molestiae. Officia ad minus nulla harum illum dolor quaerat
+                impedit blanditiis! Optio</p>
+            <div class="img-projek">
+                <div class="img-item" id="work1">
+                    <img src="img/work-1.png" alt="work1">
+                </div>
+                <div class="img-item" id="work2">
+                    <img src="img/work-2.png" alt="work2">
+                </div>
+                <div class="img-item" id="work3">
+                    <img src="img/work-3.png" alt="work3">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- link CDN Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
