--- a/index.html
+++ b/index.html
@@ -145,6 +145,53 @@
         </div>
     </section>
 
+    <section id="contact" class="contact container">
+        <div class="contact-box d-flex gap-5 align-items-center">
+            <div class="contact-box-kiri col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint autem voluptatibus dignissimos ipsa.
+                    Incidunt
+                    esse cumque molestiae in. Quisquam voluptates incidunt repellendus tenetur perferendis nostrum eum
+                    repudiandae numquam ducimus provident.</p>
+                <div class="sosmed d-flex align-items-center">
+                    <div class="sosmed-item col">
+                        <a href=""><img src="img/Facebook.svg" alt="fb-icon"></a>
+                        <p>Ocki Indra</p>
+                    </div>
+                    <div class="sosmed-item col">
+                        <a href=""><img src="img/Instagram.svg" alt="ig-icon"></a>
+                        <p>@OckiIndra</p>
+                    </div>
+                    <div class="sosmed-item col">
+                        <a href=""><img src="img/Twitter.svg" alt="tw-icon"></a>
+                        <p>@OckiIndra</p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-box-kanan col">
+                <form>
+                    <div class="mb-3">
+                        <label for="input-email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="input-email" placeholder="Masukkan Email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="input-subjek" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="input-subjek" placeholder="Masukkan Subject">
+                    </div>
+                    <div class="mb-3">
+                        <label for="input-pesan" class="form-label">Message</label>
+                        <input type="text" class="form-control" id="input-pesan" placeholder="Masukkan Pesan">
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="button">Submit</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </section>
+
+    
+
     <!-- link CDN Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
